fix: wrong repository url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Parse, encrypt and decrypt SFDL container files"
 authors = ["Mark Hähnel <hello@markhaehnel.de>"]
 version = "0.1.0"
 edition = "2021"
-repository = "https://github.com/markhaehnel/sfdl-rs.git"
+repository = "https://github.com/markhaehnel/sfdl.git"
 keywords = ["sfdl", "parse", "decrypt", "encrypt"]
 categories = ["parsing", "cryptography"]
 license = "Apache-2.0 OR MIT"
